// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`outlineColor renders 0 1`] = `
Array [
  .c0 {
  outline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #0;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #0;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders function 1`] = `
Array [
  .c0 {
  outline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: has;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: has;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders invalid theme path 1`] = `
Array [
  .c0 {
  outline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders negative number 1`] = `
Array [
  .c0 {
  outline-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #-54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #-42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #-42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  outline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  outline-color: July;
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  outline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-color: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    outline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    outline-color: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    outline-color: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    outline-color: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    outline-color: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  outline-color: July;
}

@media May {
  .c0 {
    outline-color: August;
  }
}

@media April {
  .c0 {
    outline-color: September;
  }
}

@media January {
  .c0 {
    outline-color: November;
  }
}

@media April {
  .c0 {
    outline-color: August;
  }
}

@media June {
  .c0 {
    outline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  outline-color: July;
}

@media May {
  .c0 {
    outline-color: August;
  }
}

@media April {
  .c0 {
    outline-color: September;
  }
}

@media January {
  .c0 {
    outline-color: November;
  }
}

@media April {
  .c0 {
    outline-color: August;
  }
}

@media June {
  .c0 {
    outline-color: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  outline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-color: November;
  }
}

@media April {
  .c0 {
    outline-color: January;
  }
}

@media January {
  .c0 {
    outline-color: December;
  }
}

@media April {
  .c0 {
    outline-color: April;
  }
}

@media June {
  .c0 {
    outline-color: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-color: November;
  }
}

@media April {
  .c0 {
    outline-color: January;
  }
}

@media January {
  .c0 {
    outline-color: December;
  }
}

@media April {
  .c0 {
    outline-color: April;
  }
}

@media June {
  .c0 {
    outline-color: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    outline-color: July;
  }
}

@media April {
  .c0 {
    outline-color: August;
  }
}

@media January {
  .c0 {
    outline-color: September;
  }
}

@media April {
  .c0 {
    outline-color: November;
  }
}

@media June {
  .c0 {
    outline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    outline-color: July;
  }
}

@media April {
  .c0 {
    outline-color: August;
  }
}

@media January {
  .c0 {
    outline-color: September;
  }
}

@media April {
  .c0 {
    outline-color: November;
  }
}

@media June {
  .c0 {
    outline-color: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-color: January;
  }
}

@media April {
  .c0 {
    outline-color: December;
  }
}

@media January {
  .c0 {
    outline-color: April;
  }
}

@media April {
  .c0 {
    outline-color: May;
  }
}

@media June {
  .c0 {
    outline-color: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    outline-color: January;
  }
}

@media April {
  .c0 {
    outline-color: December;
  }
}

@media January {
  .c0 {
    outline-color: April;
  }
}

@media April {
  .c0 {
    outline-color: May;
  }
}

@media June {
  .c0 {
    outline-color: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders postitive number 1`] = `
Array [
  .c0 {
  outline-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #54881;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #42365;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: #42365;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders string 1`] = `
Array [
  .c0 {
  outline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: July;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: June;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: June;
}

<div
    className="c0"
  />,
]
`;

exports[`outlineColor renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`outlineColor renders valid theme path 1`] = `
Array [
  .c0 {
  outline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  outline-color: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
